Back porting of the mod to fix #6