@@ -3,13 +3,16 @@ package de.thedead2.customadvancements.util.core;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Lists;
 import de.thedead2.customadvancements.advancements.AdvancementTabsSorter;
 import de.thedead2.customadvancements.advancements.progression.AdvancementProgressionMode;
 import net.minecraft.advancements.Advancement;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.common.ForgeConfigSpec;
 
 import java.util.*;
+import java.util.stream.Collectors;
+
 
 public abstract class ConfigManager {
 
@@ -51,7 +54,8 @@ public abstract class ConfigManager {
 
         ADVANCEMENT_PROGRESSION = CONFIG_BUILDER.comment("Changing this to true causes each advancement to only be achievable if it's parent has been achieved. Useful for progression systems!").define("advancementProgression", false);
 
-        CONNECTED_ADVANCEMENTS = CONFIG_BUILDER.comment("A list of connected advancements in the format of parent -> child").defineList("connectedAdvancementsList", List.of("minecraft:story/follow_ender_eye -> minecraft:end/root", "minecraft:story/form_obsidian -> minecraft:nether/root"), in -> in instanceof String);
+        CONNECTED_ADVANCEMENTS = CONFIG_BUILDER.comment("A list of connected advancements in the format of parent -> child").defineList("connectedAdvancementsList", Lists.newArrayList("minecraft:story/follow_ender_eye -> minecraft:end/root", "minecraft:story"
+                + "/form_obsidian -> minecraft:nether/root"), in -> in instanceof String);
 
         RESET_ADVANCEMENTS_ON_DEATH = CONFIG_BUILDER.comment("Whether all advancement progress should be reset when the player dies").define("resetAdvancementProgressOnDeath", false);
 
@@ -75,7 +79,7 @@ public abstract class ConfigManager {
     public static ImmutableSet<ResourceLocation> getBlacklistedResourceLocations() {
         Set<ResourceLocation> blacklistedResourceLocations = new HashSet<>();
 
-        ADVANCEMENT_BLACKLIST.get().forEach(String -> blacklistedResourceLocations.add(ResourceLocation.tryParse(String)));
+        ADVANCEMENT_BLACKLIST.get().forEach(String -> blacklistedResourceLocations.add(ResourceLocation.tryCreate(String)));
 
         return ImmutableSet.copyOf(blacklistedResourceLocations);
     }
@@ -86,14 +90,14 @@ public abstract class ConfigManager {
             int index = s.indexOf("->");
             String s1 = s.substring(0, index - 1);
             String s2 = s.substring(index + 3);
-            connectedAdvancements.put(ResourceLocation.tryParse(s2), ResourceLocation.tryParse(s1));
+            connectedAdvancements.put(ResourceLocation.tryCreate(s2), ResourceLocation.tryCreate(s1));
         });
         return ImmutableMap.copyOf(connectedAdvancements);
     }
 
     public static ImmutableList<ResourceLocation> getSortedAdvancementList(){
         List<ResourceLocation> resourceLocations = new ArrayList<>();
-        ADVANCEMENT_SORTING_LIST.get().forEach(s -> resourceLocations.add(ResourceLocation.tryParse(s)));
+        ADVANCEMENT_SORTING_LIST.get().forEach(s -> resourceLocations.add(ResourceLocation.tryCreate(s)));
         return ImmutableList.copyOf(resourceLocations);
     }
 
@@ -107,28 +111,28 @@ public abstract class ConfigManager {
     }*/
 
     private static boolean isValidAdvancementId(Object in) {
-        if(!(in instanceof String s)) return false;
-        ResourceLocation resourceLocation = ResourceLocation.tryParse(s);
+        if(!(in instanceof String)) return false;
+        ResourceLocation resourceLocation = ResourceLocation.tryCreate((String) in);
         if(resourceLocation != null){
-            if(ModHelper.getServer().isEmpty()) return true;
-            else return ModHelper.getServer().get().getAdvancements().getAllAdvancements().stream().map(Advancement::getId).toList().contains(resourceLocation);
+            if(!ModHelper.getServer().isPresent()) return true;
+            else return ModHelper.getServer().get().getAdvancementManager().getAllAdvancements().stream().map(Advancement::getId).collect(Collectors.toList()).contains(resourceLocation);
         }
         return false;
     }
 
     private static boolean isValidRootAdvancementID(Object in){
-        if(!(in instanceof String s)) return false;
-        ResourceLocation resourceLocation = ResourceLocation.tryParse(s);
+        if(!(in instanceof String)) return false;
+        ResourceLocation resourceLocation = ResourceLocation.tryCreate((String) in);
         if(resourceLocation != null){
-            if(ModHelper.getServer().isEmpty()) return true;
-            else return ModHelper.getServer().get().getAdvancements().getAllAdvancements().stream().filter(advancement -> advancement.getParent() == null).map(Advancement::getId).toList().contains(resourceLocation);
+            if(!ModHelper.getServer().isPresent()) return true;
+            else return ModHelper.getServer().get().getAdvancementManager().getAllAdvancements().stream().filter(advancement -> advancement.getParent() == null).map(Advancement::getId).collect(Collectors.toList()).contains(resourceLocation);
         }
         return false;
     }
 
     private static boolean isValidModID(Object in) {
-        if(!(in instanceof String s)) return false;
-        if(ModHelper.getServer().isEmpty()) return true;
-        else return ModHelper.getServer().get().getAdvancements().getAllAdvancements().stream().map(advancement -> advancement.getId().getNamespace()).toList().contains(s);
+        if(!(in instanceof String)) return false;
+        if(!ModHelper.getServer().isPresent()) return true;
+        else return ModHelper.getServer().get().getAdvancementManager().getAllAdvancements().stream().map(advancement -> advancement.getId().getNamespace()).collect(Collectors.toList()).contains((String) in);
     }
 }
